fix(web-datagrid): alignment of children of mx-selectbox

--- a/styles/web/sass/core/_legacy/_mxui.scss
+++ b/styles/web/sass/core/_legacy/_mxui.scss
@@ -3297,13 +3297,13 @@ body[dir="rtl"] .mx-header-left {
 .mx-dropdown .selected {
     background: #f8f8f8;
 }
-.mx-selectbox {
-    text-align: left;
-}
-.mx-selectbox-caret-wrapper {
-    float: right;
-    height: 100%;
-}
+//.mx-selectbox {
+//    text-align: left;
+//}
+//.mx-selectbox-caret-wrapper {
+//    float: right;
+//    height: 100%;
+//}
 
 .mx-demouserswitcher {
     position: fixed;
