--- a/styles/web/sass/core/helpers/_datagrids.scss
+++ b/styles/web/sass/core/helpers/_datagrids.scss
@@ -147,6 +147,7 @@
             width: 80%;
             padding-left: 0;
 
+            .btn,
             .form-control {
                 height: 35px;
                 font-size: 12px;
